--- a/mtj/scss/main.scss
+++ b/mtj/scss/main.scss
@@ -34,6 +34,13 @@ h2{
 	margin-bottom:20px;
 }
  
+.x-show{
+	display:none;
+}
+.l-show{
+	display:block;
+}
+
 .form-inline {
 	.form-group{
 		width:48%;
@@ -102,12 +109,12 @@ svg:not(:root) {
 	border:1px solid #772ab3;
 	&:hover, &:active, &:focus{
 		background:#570596 !important;
-		border:2px solid #570596 !important;
+		border:1px solid #570596 !important;
 	}
 }
 
 .btn-default{
-	border:2px solid #772ab3;
+	border:1px solid #772ab3;
 	color:#772ab3;
 }
 
@@ -118,6 +125,7 @@ ul{
 li{
 	list-style-type: none; 
 }
+
 
 .bw-header{ 
 	display:flex;
@@ -288,6 +296,10 @@ section{
 		flex-wrap: wrap;
 		padding: 0 4px;
 	  }
+
+	  .gallery{
+		display:flex;
+	  }
 	  
 	  /* Create four equal columns that sits next to each other */
 	  .column {
@@ -295,13 +307,25 @@ section{
 		flex: 25%;
 		max-width: 25%;
 		padding: 0 4px;
+		img {
+			margin-top: 8px;
+			vertical-align: middle;
+			width: 100%;
+			transition: all .2s;
+			opacity: .8;
+			position: relative;
+		  }
+		  a{
+			 &:hover{
+			img{
+					transform: scale(1.1);
+					opacity: 1;
+					z-index: 1;
+				}
+			  }
+		  }
 	  }
 	  
-	  .column img {
-		margin-top: 8px;
-		vertical-align: middle;
-		width: 100%;
-	  }
 	  
 	  /* Responsive layout - makes a two column-layout instead of four columns */
 	  @media screen and (max-width: 800px) {
@@ -608,6 +632,7 @@ section{
 		left:0px;
 		width:100%;
 		height:100%;
+		object-fit: cover;
 	}
 }
 .inner-section-03{
@@ -871,15 +896,20 @@ ul.list {
 } 
 
 @media (max-width: 780px) {
+	.x-show{
+		display:block;
+	}
+	.l-show{
+		display:none;
+	}
 	.bw-header{
+		height: 55px;
 		display:block;
 		box-shadow: 1px 0px 5px rgba(0,0,0,0.50);
 		.btn{
-			top:100px;
 			z-index:0;
 			right: 15px;
 			top: 0px;
-			border: none;
     		padding: 5px 12px;
 		}
 		&.fixed{
@@ -888,12 +918,14 @@ ul.list {
 		.logo{
 			left: 15px;
 			top: 0px;
-			height: 37px;
 			background:none;
 			box-shadow:none;
-			width: 24%;
 			padding:0px;
+			img{
+				width:70%;
+			}
 		}
+		
 	}
 	.bread-crum{
 		margin:0;
@@ -915,20 +947,26 @@ ul.list {
 	}
 	.navbar{
 		min-height: auto;
-		right: 60px;
+		right: 75px;
+		border-radius:5px;
+		background: #333333;
+		display:table;
+		position:absolute;
 		.navbar-toggle{
 			margin:0px;
+			padding: 10px;
+			background: #772ab3;
+			border:1px solid #772ab3;
+			&:hover, &:focus{
+				background: #570596;
+				border:1px solid #570596;
+			}
 		}
 		.navbar-nav{
 			li{
 				margin:10px 0px;
 			}
 		}
-	}
-	.navbar-inverse{
-		background: #333333;
-		display: table;
-		float: right;
 	}
 	.donation-form{
 		width:100%;
@@ -980,6 +1018,7 @@ ul.list {
 	}
 
 	.main-banner{
+		background-position: left top;
 		#myCarousel {
 			margin-left: 0px;
 			.carousel-caption{
