--- a/mtj/scss/main.scss
+++ b/mtj/scss/main.scss
@@ -288,7 +288,7 @@ section{
 	}
 }
 .gallary-view{
-	margin-top:50px;
+	margin:50px 0px;
 	.row {
 		display: -ms-flexbox; /* IE10 */
 		display: flex;
@@ -299,13 +299,14 @@ section{
 
 	  .gallery{
 		display:flex;
+		width:50%;
 	  }
 	  
 	  /* Create four equal columns that sits next to each other */
 	  .column {
-		-ms-flex: 25%; /* IE10 */
-		flex: 25%;
-		max-width: 25%;
+		-ms-flex: 100%; /* IE10 */
+		flex: 100%;
+		max-width: 100%;
 		padding: 0 4px;
 		img {
 			margin-top: 8px;
@@ -324,25 +325,6 @@ section{
 				}
 			  }
 		  }
-	  }
-	  
-	  
-	  /* Responsive layout - makes a two column-layout instead of four columns */
-	  @media screen and (max-width: 800px) {
-		.column {
-		  -ms-flex: 50%;
-		  flex: 50%;
-		  max-width: 50%;
-		}
-	  }
-	  
-	  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-	  @media screen and (max-width: 600px) {
-		.column {
-		  -ms-flex: 100%;
-		  flex: 100%;
-		  max-width: 100%;
-		}
 	  }
 }
 .section-02{
@@ -408,7 +390,7 @@ section{
 			a{
 				border:none;
 				border-bottom:2px solid transparent;
-				padding: 10px 50px 8px;
+				padding: 10px 70px 8px;
 				font-weight:600;
 			}
 			&.active{
@@ -446,6 +428,30 @@ section{
 			font-size:20px;
 		}
 	}
+}
+
+.news-events-view-more{
+	img{
+		margin-top: 15px;
+	}
+.event-grid{
+	.card{
+		background:#fff; 
+		box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.10);
+		padding:15px 15px 20px;
+		border-radius:5px;
+		span{
+			font-size:14px;
+		}
+		h5{
+			font-size:24px;
+			padding: 15px 0px 5px;
+		}
+		a{
+			padding-bottom:10px;
+		}	
+	}
+}
 }
 
 #myCarousel-1{
@@ -590,7 +596,7 @@ section{
 		padding:50px 0 10px;
 		.card-title{
 			font-weight:500;
-			font-size: 18px;
+			font-size: 24px;
 		}
 		.row{
 			border-top:1px dashed #ccc;
@@ -830,7 +836,7 @@ ul.list {
 		border:1px solid #fff !important; 
 		padding:6px 12px;
 	} 
-	h4, p, h5{   
+	h4, p, h5, a {   
 		color:#fff; 
 	}
 	h4{
@@ -896,6 +902,18 @@ ul.list {
 } 
 
 @media (max-width: 780px) {
+
+	.gallary-view{
+		.gallery{
+			width:100%;
+			.column{
+				-ms-flex: 50%;
+				flex: 50%;
+				max-width: 50%;
+			}
+		}
+	}
+
 	.x-show{
 		display:block;
 	}
