--- a/mtj/css/main.css
+++ b/mtj/css/main.css
@@ -720,7 +720,6 @@ ul.list {
     min-height: auto;
     right: 75px;
     border-radius: 5px;
-    background: #333333;
     display: table;
     position: absolute; }
     .navbar .navbar-toggle {
@@ -733,6 +732,15 @@ ul.list {
         border: 1px solid #570596; }
     .navbar .navbar-nav li {
       margin: 10px 0px; }
+    .navbar .navbar-collapse {
+      background: #101010;
+      position: fixed;
+      left: 0;
+      top: 55px;
+      right: 0px !important;
+      height: calc(100vh); }
+      .navbar .navbar-collapse .navbar-nav {
+        width: 100%; }
   .donation-form {
     width: 100%;
     overflow-y: auto;
