--- a/dlt/css/main.css
+++ b/dlt/css/main.css
@@ -2,6 +2,7 @@ body {
   color: #333333;
   text-shadow: none !important;
   font-family: 'Roboto', sans-serif;
+  font-size: 24px;
   background: -webkit-linear-gradient(top, #181a4d 0%, #591c38 40%, #831e29 60%, #c32114 100%);
   background: -o-linear-gradient(top, #181a4d 0%, #591c38 40%, #831e29 60%, #c32114 100%);
   background: -ms-linear-gradient(top, #181a4d 0%, #591c38 40%, #831e29 60%, #c32114 100%);
@@ -62,16 +63,23 @@ ul {
 li {
   list-style-type: none; }
 
-.bw-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 0; }
-  .bw-header .logo img {
-    width: 100%; }
-  .bw-header h2 {
+.custom-header {
+  padding-top: 50px;
+  padding-bottom: 50px; }
+  .custom-header .logo {
+    display: inline-block;
+    justify-content: left;
+    font-size: 47px;
+    color: #fff; }
+    .custom-header .logo span {
+      font-weight: 700; }
+  .custom-header h2 {
     text-transform: uppercase;
     margin: 0px; }
+  .custom-header #navbar {
+    display: inline-block !important;
+    float: right;
+    margin-top: 10px; }
 
 .navbar-inverse {
   background: none;
@@ -84,9 +92,11 @@ li {
     .navbar-inverse .navbar-nav li a {
       color: #fff;
       text-shadow: none;
-      text-transform: uppercase; }
+      text-transform: uppercase;
+      font-size: 26px; }
 
 .lable-strip {
+  padding: 30px 0;
   background: #fff; }
   .lable-strip h2 {
     color: #000000;
@@ -105,15 +115,20 @@ li {
     font-size: 20px;
     font-weight: bold;
     margin-top: 20px;
-    color: #fff; }
+    color: #fff;
+    text-transform: uppercase; }
 
 .our-achiememnts {
   display: flex; }
   .our-achiememnts img {
-    width: 100%; }
+    width: 100%;
+    border-radius: 15px; }
   .our-achiememnts .col {
     margin: 0px;
     padding: 25px; }
+  .our-achiememnts h2 {
+    margin-top: 0px;
+    font-weight: 700; }
 
 .g-o {
   padding: 30px 0 60px;
@@ -158,7 +173,7 @@ ul.list {
   .ft-section svg {
     fill: #e7430a; }
   .ft-section .copyright {
-    background: #e7430a;
+    background: #161a4e;
     color: #fff;
     font-size: 14px;
     padding: 15px 0; }
@@ -173,6 +188,30 @@ ul.list {
   background-size: cover; }
   .main-banner .container {
     position: relative; }
+  .main-banner .carousel-inner {
+    border-radius: 15px;
+    overflow: hidden; }
+  .main-banner .logo {
+    position: absolute;
+    right: 50px;
+    top: 0px;
+    z-index: 9;
+    width: 220px;
+    height: 265px;
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&1+78,0+100 */
+    background: -moz-linear-gradient(top, white 0%, white 78%, rgba(255, 255, 255, 0) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, white 0%, white 78%, rgba(255, 255, 255, 0) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, white 0%, white 78%, rgba(255, 255, 255, 0) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 );
+    /* IE6-9 */ }
+    .main-banner .logo img {
+      width: 80%;
+      text-align: center;
+      margin: 0 auto;
+      display: table; }
   .main-banner .plane-baneer img {
     width: 100%; }
   .main-banner .carousel-indicators {
@@ -185,30 +224,40 @@ ul.list {
       .main-banner .carousel-indicators li.active {
         background: #da5004; }
   .main-banner .carousel-caption {
-    background: #fff;
     padding: 15px;
-    width: 300px;
     right: 70px;
     left: auto;
-    transform: skew(-30deg); }
+    top: 40%; }
     .main-banner .carousel-caption h3 {
       color: #000;
-      text-align: left;
+      text-align: right;
       margin: 0px 0 0 30px;
-      transform: skew(30deg); }
-    .main-banner .carousel-caption span {
-      position: absolute;
-      width: 15px;
-      height: 100%;
-      background: #fff;
-      top: 0;
-      left: -25px; }
+      font-size: 47px; }
+    .main-banner .carousel-caption h4 {
+      color: #c91406;
+      text-align: right;
+      margin: 0px 0 0 30px;
+      font-size: 33px; }
+
+.short-contact-info {
+  color: #ffc500;
+  font-size: 32px;
+  text-align: center;
+  white-space: pre-wrap;
+  line-height: 28px;
+  margin-top: 70px;
+  margin-bottom: 0px; }
 
 .footer {
   background: #fff;
   padding: 25px 0 0; }
+  .footer h2 {
+    margin: 35px 0 30px;
+    font-size: 55px; }
   .footer h3 {
-    color: #000; }
+    color: #000;
+    font-size: 34px;
+    font-weight: 700; }
   .footer svg {
     fill: #e7430a; }
   .footer .footer-li li {
@@ -218,7 +267,7 @@ ul.list {
       color: #593a00; }
 
 .copyright {
-  background: #333333;
+  background: #161a4e;
   color: #fff; }
   .copyright p {
     margin: 0;
