--- a/dlt/scss/main.scss
+++ b/dlt/scss/main.scss
@@ -2,6 +2,7 @@ body {
 	color:#333333;
 	text-shadow: none !important;
 	font-family: 'Roboto', sans-serif;
+	font-size:24px;
 	background: -webkit-linear-gradient(top, rgb(24, 26, 77) 0%, rgb(89, 28, 56) 40%, rgb(131, 30, 41) 60%, rgb(195, 33, 20) 100%);
 	background: -o-linear-gradient(top, rgb(24, 26, 77) 0%, rgb(89, 28, 56) 40%, rgb(131, 30, 41) 60%, rgb(195, 33, 20) 100%);
 	background: -ms-linear-gradient(top, rgb(24, 26, 77) 0%, rgb(89, 28, 56) 40%, rgb(131, 30, 41) 60%, rgb(195, 33, 20) 100%);
@@ -76,19 +77,27 @@ li{
 	list-style-type: none; 
 }
 
-.bw-header{ 
-	display:flex;
-	align-items: center;
-	justify-content: space-between; 
-	padding:10px 0;
+.custom-header{ 
+	padding-top:50px;
+	padding-bottom:50px;
 	.logo { 
-		img 
-		{width:100%;} 	
+		display: inline-block ; 
+		justify-content: left;
+		font-size: 47px;
+		color:#fff;
+	span{
+		font-weight: 700;
+	}
 	}
 	h2{
 		text-transform: uppercase; 
 		margin: 0px; 
 	}  
+	#navbar{
+		display: inline-block !important;
+		float: right; 
+		margin-top: 10px;
+	}
 }
 .navbar-inverse{
 	background:none;
@@ -102,13 +111,15 @@ li{
 			a{
 				color:#fff; 
 				text-shadow: none;
-				text-transform: uppercase;
+				text-transform: uppercase; 
+				font-size:26px;
 			}
 		}
 	}
 }
 
 .lable-strip{
+	padding: 30px 0;
 	background:#fff;
 	h2{  
 		color:#000000;
@@ -131,6 +142,7 @@ li{
 		font-weight: bold; 
 		margin-top:20px;
 		color:#fff;
+		text-transform: uppercase;
 	}
 }
 
@@ -139,11 +151,15 @@ li{
 
 	img{
 		width:100%;
+		border-radius:15px;
 	}
 	.col{
 		margin:0px; 
 		padding:25px; 
-
+	}
+	h2{
+		margin-top:0px;
+		font-weight: 700; 
 	}
 }
 
@@ -207,7 +223,7 @@ ul.list {
 	}
 
 	.copyright {
-		background: #e7430a;
+		background: #161a4e; 
 		color: #fff;
 		font-size: 14px;
 		padding: 15px 0;
@@ -228,6 +244,30 @@ ul.list {
 	.container{
 		position: relative; 
 	}
+	.carousel-inner{
+		border-radius:15px; 
+		overflow: hidden; 
+	}
+	.logo{
+		position: absolute;
+		right:50px;
+		top:0px;
+		z-index:9;
+		width: 220px;
+		height: 265px;
+/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&1+78,0+100 */
+background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(255,255,255,1) 78%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 78%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 78%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+
+img{
+			width:80%;
+			text-align: center;
+			margin:0 auto;
+			display:table;
+		}
+	}
 .plane-baneer{
 	img{
 		width:100%; 
@@ -245,37 +285,47 @@ ul.list {
 			}
 		}
 	}
-	
 	.carousel-caption{
-		background:#fff;
-			padding:15px;  
-			width:300px;
+			padding:15px;
 			right: 70px;
 			left: auto;
-			transform: skew(-30deg);
-		
+			top: 40%;
 		h3{
 			color:#000;
-			text-align: left;
+			text-align: right;
 			margin:0px 0 0 30px;
-			transform: skew(30deg);
+			font-size:47px; 
 		}
-		span{
-			position:absolute;
-			width:15px;
-			height:100%;
-			background:#fff;
-			top:0;
-			left:-25px;
+		h4{
+			color:#c91406;
+			text-align: right;
+			margin:0px 0 0 30px;
+			font-size:33px; 
 		}
 	}
+}
+
+.short-contact-info{
+	color: #ffc500;
+	font-size:32px;
+	text-align: center;
+	white-space: pre-wrap;
+    line-height: 28px;
+    margin-top: 70px;
+    margin-bottom: 0px;
 }
 
 .footer{
 	background:#fff;
 	padding:25px 0 0; 
+	h2{
+		margin:35px 0 30px;
+		font-size:55px;
+	}
 	h3{ 
 		color:#000;
+		font-size:34px;
+		font-weight:700;  
 	}
 	svg{
 		fill: #e7430a;
@@ -292,7 +342,7 @@ ul.list {
 }
 
 .copyright{
-	background:#333333; 
+	background:#161a4e; 
 	color:#fff;	  
 	p{
 		margin:0;
