--- a/dlt/scss/main.scss
+++ b/dlt/scss/main.scss
@@ -1,13 +1,17 @@
+html {
+	scroll-behavior: smooth;
+  }
 body {
 	color:#333333;
 	text-shadow: none !important;
 	font-family: 'Roboto', sans-serif;
-	font-size:24px;
+	font-size:14px;
 	background: -webkit-linear-gradient(top, rgb(24, 26, 77) 0%, rgb(89, 28, 56) 40%, rgb(131, 30, 41) 60%, rgb(195, 33, 20) 100%);
 	background: -o-linear-gradient(top, rgb(24, 26, 77) 0%, rgb(89, 28, 56) 40%, rgb(131, 30, 41) 60%, rgb(195, 33, 20) 100%);
 	background: -ms-linear-gradient(top, rgb(24, 26, 77) 0%, rgb(89, 28, 56) 40%, rgb(131, 30, 41) 60%, rgb(195, 33, 20) 100%);
 	background: -moz-linear-gradient(top, rgb(24, 26, 77) 0%, rgb(89, 28, 56) 40%, rgb(131, 30, 41) 60%, rgb(195, 33, 20) 100%);
 	background: linear-gradient(to bottom, rgb(24, 26, 77) 0%, rgb(89, 28, 56) 40%, rgb(131, 30, 41) 60%, rgb(195, 33, 20) 100%);
+	text-shadow: none;
 }
 
 svg {
@@ -69,6 +73,10 @@ h1{
 	color:#000; 
 	margin:50px 0; 
 }
+h2{
+	font-size:36px;
+	color:#000;
+}
 ul{
 	padding:0px;
 }
@@ -78,12 +86,12 @@ li{
 }
 
 .custom-header{ 
-	padding-top:50px;
-	padding-bottom:50px;
+	padding-top:15px;
+	padding-bottom:15px;
 	.logo { 
 		display: inline-block ; 
 		justify-content: left;
-		font-size: 47px;
+		font-size: 28px; 
 		color:#fff;
 	span{
 		font-weight: 700;
@@ -96,13 +104,13 @@ li{
 	#navbar{
 		display: inline-block !important;
 		float: right; 
-		margin-top: 10px;
 	}
 }
 .navbar-inverse{
 	background:none;
 	border:none;
 	margin:0; 
+
 	.navbar-nav{
 		float: none;
 		display: table;
@@ -112,7 +120,7 @@ li{
 				color:#fff; 
 				text-shadow: none;
 				text-transform: uppercase; 
-				font-size:26px;
+				font-size:14px;
 			}
 		}
 	}
@@ -123,11 +131,13 @@ li{
 	background:#fff;
 	h2{  
 		color:#000000;
-		font-weight:bold;
 		text-align:center;
 		padding: 18px 0px;
 		position: relative;
 		margin: 0 50px; 
+}
+h4{
+	font-weight: 700;
 }
 }
 
@@ -138,7 +148,7 @@ li{
 	}
 	.title-heading { 
 		text-align:center;
-		font-size:20px; 
+		font-size:16px; 
 		font-weight: bold; 
 		margin-top:20px;
 		color:#fff;
@@ -149,6 +159,11 @@ li{
 .our-achiememnts {
 	display: flex;
 
+	p{
+		line-height: 30px; 
+		margin-top: 30px; 
+	}
+
 	img{
 		width:100%;
 		border-radius:15px;
@@ -157,7 +172,7 @@ li{
 		margin:0px; 
 		padding:25px; 
 	}
-	h2{
+	h4{
 		margin-top:0px;
 		font-weight: 700; 
 	}
@@ -295,6 +310,8 @@ img{
 			text-align: right;
 			margin:0px 0 0 30px;
 			font-size:47px; 
+			font-weight: 700;
+			text-shadow: none; 
 		}
 		h4{
 			color:#c91406;
@@ -307,7 +324,7 @@ img{
 
 .short-contact-info{
 	color: #ffc500;
-	font-size:32px;
+	font-size:24px;
 	text-align: center;
 	white-space: pre-wrap;
     line-height: 28px;
@@ -320,11 +337,10 @@ img{
 	padding:25px 0 0; 
 	h2{
 		margin:35px 0 30px;
-		font-size:55px;
 	}
 	h3{ 
 		color:#000;
-		font-size:34px;
+		font-size:18px; 
 		font-weight:700;  
 	}
 	svg{
