--- a/rt/css/main.css
+++ b/rt/css/main.css
@@ -5,13 +5,7 @@ body {
   color: #333333;
   text-shadow: none !important;
   font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  background: -webkit-linear-gradient(top, #181a4d 0%, #591c38 40%, #831e29 60%, #c32114 100%);
-  background: -o-linear-gradient(top, #181a4d 0%, #591c38 40%, #831e29 60%, #c32114 100%);
-  background: -ms-linear-gradient(top, #181a4d 0%, #591c38 40%, #831e29 60%, #c32114 100%);
-  background: -moz-linear-gradient(top, #181a4d 0%, #591c38 40%, #831e29 60%, #c32114 100%);
-  background: linear-gradient(to bottom, #181a4d 0%, #591c38 40%, #831e29 60%, #c32114 100%);
-  text-shadow: none; }
+  font-size: 14px; }
 
 svg {
   vertical-align: middle;
@@ -111,6 +105,9 @@ li {
   background-color: #555;
   /* Add a dark-grey background on hover */ }
 
+.header {
+  background: #fff; }
+
 .custom-header {
   padding-top: 20px;
   padding-bottom: 15px; }
@@ -132,7 +129,7 @@ li {
   float: right; }
 
 .navbar-inverse {
-  background: none;
+  background: #000;
   border: none;
   margin: 0; }
   .navbar-inverse .navbar-nav {
@@ -151,10 +148,8 @@ li {
   background: #fff; }
   .lable-strip h2 {
     color: #000000;
-    text-align: center;
     padding: 18px 0px;
-    position: relative;
-    margin: 0 50px; }
+    position: relative; }
   .lable-strip h4 {
     font-weight: 700; }
 
