--- a/rt/scss/main.scss
+++ b/rt/scss/main.scss
@@ -6,12 +6,6 @@ body {
 	text-shadow: none !important;
 	font-family: 'Roboto', sans-serif;
 	font-size:14px;
-	background: -webkit-linear-gradient(top, rgb(24, 26, 77) 0%, rgb(89, 28, 56) 40%, rgb(131, 30, 41) 60%, rgb(195, 33, 20) 100%);
-	background: -o-linear-gradient(top, rgb(24, 26, 77) 0%, rgb(89, 28, 56) 40%, rgb(131, 30, 41) 60%, rgb(195, 33, 20) 100%);
-	background: -ms-linear-gradient(top, rgb(24, 26, 77) 0%, rgb(89, 28, 56) 40%, rgb(131, 30, 41) 60%, rgb(195, 33, 20) 100%);
-	background: -moz-linear-gradient(top, rgb(24, 26, 77) 0%, rgb(89, 28, 56) 40%, rgb(131, 30, 41) 60%, rgb(195, 33, 20) 100%);
-	background: linear-gradient(to bottom, rgb(24, 26, 77) 0%, rgb(89, 28, 56) 40%, rgb(131, 30, 41) 60%, rgb(195, 33, 20) 100%);
-	text-shadow: none;
 }
 
 svg {
@@ -115,6 +109,9 @@ li{
 	background-color: #555; /* Add a dark-grey background on hover */
   }
 
+  .header{
+	  background:#fff; 
+  }
 
 .custom-header{ 
 	padding-top:20px;
@@ -142,7 +139,7 @@ li{
 	float: right; 
 }
 .navbar-inverse{
-	background:none;
+	background:#000;
 	border:none;
 	margin:0; 
 
@@ -167,10 +164,8 @@ li{
 	background:#fff;
 	h2{  
 		color:#000000;
-		text-align:center;
 		padding: 18px 0px;
 		position: relative;
-		margin: 0 50px; 
 }
 h4{
 	font-weight: 700;
