--- a/rt/css/main.css
+++ b/rt/css/main.css
@@ -4,7 +4,7 @@ html {
 body {
   color: #333333;
   text-shadow: none !important;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 14px; }
 
 svg {
@@ -109,14 +109,13 @@ li {
   background: #fff; }
 
 .custom-header {
-  padding-top: 20px;
+  padding-top: 15px;
   padding-bottom: 15px; }
   .custom-header .logo {
     display: inline-block;
-    justify-content: left;
-    font-size: 28px;
-    color: #fff;
-    font-family: arial; }
+    justify-content: left; }
+    .custom-header .logo img {
+      width: 70%; }
     .custom-header .logo span {
       font-weight: 700; }
   .custom-header h2 {
@@ -129,7 +128,7 @@ li {
   float: right; }
 
 .navbar-inverse {
-  background: #000;
+  background: #333;
   border: none;
   margin: 0; }
   .navbar-inverse .navbar-nav {
@@ -140,8 +139,9 @@ li {
       color: #fff;
       text-shadow: none;
       text-transform: uppercase;
-      font-size: 16px;
-      font-weight: 700; }
+      font-size: 16px; }
+  .navbar-inverse .custom-header {
+    padding: 0px; }
 
 .lable-strip {
   padding: 30px 0;
@@ -153,8 +153,35 @@ li {
   .lable-strip h4 {
     font-weight: 700; }
 
-.services-info {
+.services-info-section {
+  background-color: #f7f7f7; }
+
+.about-us {
   margin: 50px 0; }
+
+.full-img {
+  overflow: hidden; }
+  .full-img img {
+    width: 100%; }
+
+.more-services-info .panel-body {
+  overflow: hidden;
+  padding: 0; }
+
+.more-services-info .panel-footer {
+  background-color: #b90707;
+  border-radius: 0;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff; }
+  .more-services-info .panel-footer p {
+    margin: 0;
+    font-size: 18px; }
+
+.services-info {
+  padding: 50px 0 10px; }
   .services-info img {
     width: 100%;
     border-radius: 15px; }
@@ -163,7 +190,7 @@ li {
     font-size: 16px;
     font-weight: bold;
     margin-top: 20px;
-    color: #fff;
+    color: #000;
     text-transform: uppercase; }
 
 #service {
@@ -239,18 +266,22 @@ ul.list {
     text-decoration: none; }
 
 .main-banner {
+  background-image: url("../images/banner-bg.jpg");
   background-size: cover; }
   .main-banner .container {
     position: relative; }
   .main-banner .carousel-inner {
     border-radius: 15px;
     overflow: hidden; }
+    .main-banner .carousel-inner .picsum-img-wrapper {
+      display: flex;
+      justify-content: start;
+      align-items: center;
+      height: 650px; }
     .main-banner .carousel-inner .item {
       height: 650px; }
       .main-banner .carousel-inner .item img {
-        object-fit: fill;
-        height: 650px;
-        width: 100%; }
+        object-fit: fill; }
   .main-banner .logo {
     position: absolute;
     right: 50px;
@@ -276,34 +307,43 @@ ul.list {
         background: #da5004; }
   .main-banner .carousel-caption {
     padding: 15px;
-    left: -62px;
-    bottom: 0;
-    transform: skew(20deg);
-    widows: 70%;
-    background: rgba(245, 0, 0, 0.5); }
+    right: 0px;
+    bottom: 30px;
+    text-align: left;
+    left: auto; }
+    .main-banner .carousel-caption h2 {
+      font-size: 50px;
+      color: #fff;
+      font-weight: 700; }
     .main-banner .carousel-caption h3 {
       color: #fff;
       text-align: left;
-      margin: 0px 0 0 70px;
-      font-size: 40px;
+      font-size: 36px;
       font-weight: 700;
-      text-shadow: none;
-      transform: skew(-20deg); }
+      text-shadow: none; }
 
 .short-contact-info {
-  color: #ffc500;
-  font-size: 24px;
-  text-align: center;
-  white-space: pre-wrap;
-  line-height: 28px;
-  margin-top: 70px;
-  margin-bottom: 0px; }
-  .short-contact-info span {
-    margin: 0 15px; }
+  color: #000000;
+  font-size: 18px;
+  float: right;
+  margin-top: 10px; }
+  .short-contact-info .highlight {
+    color: #c20404;
+    font-weight: 700; }
 
 .footer {
-  background: #fff;
-  padding: 25px 0 40px; }
+  background: #f7f7f7;
+  margin-top: 50px; }
+  .footer .col {
+    margin-bottom: 0; }
+  .footer .mapouter {
+    height: 100%;
+    width: 100%; }
+  .footer .gmap_canvas {
+    height: 100%; }
+    .footer .gmap_canvas iframe {
+      width: 100%;
+      height: 100%; }
   .footer h2 {
     margin: 35px 0 30px; }
   .footer p {
@@ -326,7 +366,8 @@ ul.list {
     display: table; }
 
 .social-network {
-  display: flex; }
+  display: flex;
+  padding-bottom: 50px; }
   .social-network a {
     margin-right: 15px;
     display: flex;
@@ -335,11 +376,12 @@ ul.list {
       margin-right: 0px; }
 
 .copyright {
-  background: #161a4e;
+  background: #b90707;
   color: #fff; }
   .copyright p {
     margin: 0;
-    padding: 15px 0; }
+    padding: 15px 0;
+    text-align: center; }
 
 @media (max-width: 576px) {
   .navbar-inverse {
