--- a/rt/scss/main.scss
+++ b/rt/scss/main.scss
@@ -4,7 +4,7 @@ html {
 body {
 	color:#333333;
 	text-shadow: none !important;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Condensed', sans-serif;
 	font-size:14px;
 }
 
@@ -114,14 +114,14 @@ li{
   }
 
 .custom-header{ 
-	padding-top:20px;
+	padding-top:15px;
 	padding-bottom:15px;
 	.logo { 
 		display: inline-block ; 
 		justify-content: left;
-		font-size: 28px; 
-		color:#fff;
-		font-family: arial;
+		img{
+			width: 70%;
+		}
 	span{
 		font-weight: 700;
 	}
@@ -139,7 +139,7 @@ li{
 	float: right; 
 }
 .navbar-inverse{
-	background:#000;
+	background:#333;
 	border:none;
 	margin:0; 
 
@@ -153,9 +153,11 @@ li{
 				text-shadow: none;
 				text-transform: uppercase; 
 				font-size:16px;
-				font-weight: 700;
 			}
 		}
+	}
+	.custom-header{
+		padding:0px;
 	}
 }
 
@@ -172,8 +174,45 @@ h4{
 }
 }
 
-.services-info{
+.services-info-section{
+	background-color: #f7f7f7;
+}
+
+.about-us{
 	margin:50px 0;
+}
+
+.full-img{
+	overflow: hidden;
+	img{
+		width:100%;
+	}
+}      
+
+.more-services-info{
+	.panel-body{
+		overflow: hidden; 
+		padding:0;
+	}
+	.panel-footer{
+		background-color: #b90707;
+		border-radius:0;
+		border:none;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		color:#fff;
+		p{
+			margin:0;
+			font-size: 18px;
+		}
+	}
+}
+
+
+.services-info{
+	padding:50px 0 10px;
+	 
 	img{
 		width:100%;
 		border-radius: 15px;
@@ -183,7 +222,7 @@ h4{
 		font-size:16px; 
 		font-weight: bold; 
 		margin-top:20px;
-		color:#fff;
+		color:#000;
 		text-transform: uppercase;
 	}
 }
@@ -291,6 +330,7 @@ ul.list {
 }
 
 .main-banner {
+	background-image: url('../images/banner-bg.jpg');
 	background-size: cover;
 	.container{
 		position: relative; 
@@ -298,12 +338,18 @@ ul.list {
 	.carousel-inner{
 		border-radius:15px; 
 		overflow: hidden; 
+
+		.picsum-img-wrapper{
+			display: flex;
+			justify-content:start;
+			align-items: center;
+			height: 650px;
+		}
+
 		.item{
 			height:650px; 
 			img{
 				object-fit: fill;
-				height: 650px;
-				width: 100%;
 			}
 		}
 	}
@@ -341,41 +387,58 @@ ul.list {
 	}
 	.carousel-caption{
 			padding:15px;
-			left: -62px;
-			bottom:0;
-			transform: skew(20deg);
-			widows: 70%;
-			background:rgba(245,0,0, .5);
+			right: 0px;
+			bottom:30px;
+			text-align: left;
+			left:auto;
+			h2{
+				font-size:50px;  
+				color:#fff;
+				font-weight: 700;
+			}
 		h3{
 			color:#fff;
 			text-align: left;
-			margin:0px 0 0 70px;
-			font-size:40px; 
+			font-size:36px; 
 			font-weight: 700;
 			text-shadow: none; 
-			transform: skew(-20deg);
 		}
 		
 	}
+	
 }
 
 .short-contact-info{
-	color: #ffc500;
-	font-size:24px;
-	text-align: center;
-	white-space: pre-wrap;
-    line-height: 28px;
-    margin-top: 70px;
-	margin-bottom: 0px;
-	span{
-		margin:0 15px;
+	color: #000000;
+	font-size:18px;
+	float:right;
+	margin-top:10px;
+	.highlight{
+		color:#c20404; 
+		font-weight: 700;
 	}
 }
 
 
 .footer{
-	background:#fff;
-	padding:25px 0 40px; 
+	background:#f7f7f7;
+	margin-top:50px;
+	.col{
+		margin-bottom:0;
+	}
+	.mapouter{
+		height: 100%;
+    width: 100%;
+	}
+	.gmap_canvas{
+		height:100%;
+		iframe
+		{
+			width: 100%;
+			height: 100%;
+		} 
+	
+	}
 	h2{
 		margin:35px 0 30px;
 	}
@@ -409,6 +472,7 @@ ul.list {
 
 .social-network{
 		display: flex;
+		padding-bottom:50px;
 		a{
 			margin-right:15px; 
 			display: flex;
@@ -419,11 +483,12 @@ ul.list {
 		}
 }
 .copyright{
-	background:#161a4e; 
+	background:#b90707; 
 	color:#fff;	  
 	p{
 		margin:0;
 		padding:15px 0;
+		text-align: center;
 	} 
 }
 
